--- a/19FebAssignment.ipynb
+++ b/19FebAssignment.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "\n",
     "\"\"\"Advantages of a Flask Framework\"\"\"\n",
-    "# Flask is well-suited for building RESTful APIs. It makes it easy to define routes and handle HTTP methods like GET, POST, PUT, and DELETE.\n",
+    "# Flask is well-suited for building RESTful APIs. It is easy to define routes and handle HTTP methods like GET, POST, PUT, and DELETE.\n",
     "# Flask is known for its simplicity and minimalism. It doesn't come with a lot of built-in features.\n",
     "# Flask gives developers the flexibility to use any libraries, tools, or extensions they prefer.\n",
     "# Flask comes with a built-in development server, so you can start building and testing your application right away without the need for additional setup.\n"
